# ML_RegPipeline_Endtoend

./: .gitignore  Dockerfile.streamlit  LICENSE  README.html  README.md  app.py  gpt_pyproject.toml  main.py  mlflow.db  mlflow_requirements.txt  oldpyproject.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
mlruns/1/: meta.yaml
mlruns/644210549854279412/: meta.yaml
mlruns/644210549854279412/0147dff07aab4b38980bf5c86502b4c2/: meta.yaml
mlruns/644210549854279412/01ab95a971ef49ddb439b2d9697724df/: meta.yaml
mlruns/644210549854279412/0223afef9cb346da8448eda9c7498942/: meta.yaml
mlruns/644210549854279412/02703a4c185a4e49ad3287ec9d2b8ca5/: meta.yaml
mlruns/644210549854279412/02ab698b66f64b028e4a84f0c82acfed/: meta.yaml
mlruns/644210549854279412/02c7834c38b24c5bb4819d7b9c7fb157/: meta.yaml
mlruns/644210549854279412/04b3f9babd9e4c08b6da28a8c4c6cb91/: meta.yaml
mlruns/644210549854279412/0569ac5fe2ab47c193755ce42c56aa2f/: meta.yaml
mlruns/644210549854279412/06dbdacb61a14b4b976175ed0da28834/: meta.yaml
mlruns/644210549854279412/06e38340d4654c3da8f7753e747700cb/: meta.yaml
mlruns/644210549854279412/0744909c9b984f90bfeb77459231b31a/: meta.yaml
mlruns/644210549854279412/0a310cb4d65b4d2fafc90379d33647f2/: meta.yaml
mlruns/644210549854279412/0a640b7647e24e569ddaa27e7eb34b82/: meta.yaml
mlruns/644210549854279412/0afc594fdf9a4dd3adc56d81a7ba53ad/: meta.yaml
mlruns/644210549854279412/0cde185dd6584621a0a136ce450b212d/: meta.yaml
mlruns/644210549854279412/0f382b090bb8481aa0a55c1132531817/: meta.yaml
mlruns/644210549854279412/11ecc22c70524d5cb1ffeb3af0bfe9c2/: meta.yaml
mlruns/644210549854279412/12d1d768bd2443db8f11cbcada343e80/: meta.yaml
mlruns/644210549854279412/139cc6f986c54cdd86a18fefdf74717d/: meta.yaml
mlruns/644210549854279412/13a1aac9c45c4b8994077076f76d26c6/: meta.yaml
mlruns/644210549854279412/1682251941864377b3036e6dccdd0574/: meta.yaml
models/: xgb_model.pkl
notebooks/: 00_data_split.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MFLow.ipynb  07_S3_push_datasets_AWS.ipynb
src/api/: ai_main.py  main.py
src/feature_pipeline/: preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: oldtune.py  tune.py
tests/: smoke_test_.ipynb  test_training.py
(+3459 files in other folders)
