[project]
name = "housing-regression-mle"
version = "0.1.0"
description = "End-to-end housing regression pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # ---------------------------
    # Core utilities
    # ---------------------------
    "setuptools<81.0.0", # REQUIRED: pkg_resources + mlflow internals
    "boto3>=1.34,<2.0",

    # ---------------------------
    # ML / DS core (STRICTLY PINNED)
    # ---------------------------
    "mlflow==2.15.1",      # Avoids MLflow 3.x tracing API
    "scikit-learn==1.5.2", # Compatible with category-encoders
    "category-encoders==2.7.0", # FIXED: Added missing closing quote

    # ---------------------------
    # Numerics / data
    # ---------------------------
    "numpy==1.26.4",   # Last stable before NumPy 2.x
    "pandas==2.1.1",   # Known stable with pyarrow
    "pyarrow>=15.0.0", # Stable parquet + MLflow artifacts
    "polars>=0.20,<1.0",

    # ---------------------------
    # Modeling
    # ---------------------------
    "xgboost==2.1.3",     # Downgraded to match Sklearn 1.5.2 / MLflow 2.15
    "lightgbm>=4.4,<5.0", 
    "optuna>=4.2,<4.7",

    # ---------------------------
    # Validation / visualization
    # ---------------------------
    "evidently>=0.7,<0.8",
    "great-expectations==1.5.8",
    "matplotlib>=3.8,<3.11",
    "seaborn>=0.13,<0.14",

    # ---------------------------
    # App / tooling
    # ---------------------------
    "fastapi>=0.110,<0.118",
    "streamlit>=1.35,<1.50",
    "nbformat>=5.9,<6.0",
    "pytest>=8.0,<9.0",
]

[tool.uv]
resolution = "highest"